crates/engine/src/parser/snapshots/engine__parser__oracle_trigger__snapshot_tests__trigger_compound_and_when_dies_half.snap
---
source: crates/engine/src/parser/oracle_trigger.rs
expression: "defs[1]"
---
{
  "mode": "ChangesZone",
  "execute": {
    "kind": "Spell",
    "effect": {
      "type": "Draw",
      "count": {
        "type": "Fixed",
        "value": 1
      },
      "target": {
        "type": "Controller"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "sorcery_speed": false,
    "condition": null,
    "optional_targeting": false,
    "optional": false,
    "forward_result": false
  },
  "valid_card": {
    "type": "Typed",
    "type_filters": [
      "Creature"
    ],
    "controller": null,
    "properties": []
  },
  "origin": "Battlefield",
  "destination": "Graveyard",
  "trigger_zones": [
    "Battlefield"
  ],
  "phase": null,
  "optional": false,
  "damage_kind": "Any",
  "secondary": false,
  "valid_target": null,
  "valid_source": null,
  "description": "Whenever a creature dies, draw a card.",
  "constraint": null,
  "condition": null,
  "batched": false
}
